fog-aws-testing/vpc_and_networking.tf
resource "aws_vpc" "vpc" {
  cidr_block = "10.0.0.0/16"

  enable_dns_hostnames = true
  enable_dns_support = true

  tags {
    Name = "${var.project}-vpc"
    Project = "${var.project}"
  }
}

resource "aws_route53_zone" "private-zone" {
  name = "fogtesting.cloud"
  vpc {
    vpc_id = "${aws_vpc.vpc.id}"
  }
  tags {
    Name = "${var.project}"
    Project = "${var.project}"
  }
}





resource "aws_subnet" "public-subnet" {
  vpc_id     = "${aws_vpc.vpc.id}"
  cidr_block = "10.0.0.0/24"
  availability_zone = "${var.region}a"

  tags {
    Name = "${var.project}-public-subnet"
    Project = "${var.project}"
  }
}

resource "aws_subnet" "private-subnet" {
  vpc_id     = "${aws_vpc.vpc.id}"
  cidr_block = "10.0.1.0/24"
  availability_zone = "${var.region}a"

  tags {
    Name = "${var.project}-private-subnet"
    Project = "${var.project}"
  }
}

resource "aws_eip" "eip" {
    vpc = true
}

resource "aws_route_table" "public-route-table" {
  vpc_id = "${aws_vpc.vpc.id}"

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.internet-gateway.id}"
  }

  tags {
    Name = "${var.project}-routes"
    Project = "${var.project}"
  }
}

resource "aws_route_table_association" "public-route-table-association" {
  subnet_id      = "${aws_subnet.public-subnet.id}"
  route_table_id = "${aws_route_table.public-route-table.id}"
}

resource "aws_internet_gateway" "internet-gateway" {
  vpc_id = "${aws_vpc.vpc.id}"

  tags {
    Name = "${var.project}-internet-gateway"
    Project = "${var.project}"
  }
}

resource "aws_nat_gateway" "nat-gateway" {
  allocation_id = "${aws_eip.eip.id}"
  subnet_id     = "${aws_subnet.public-subnet.id}"

  tags {
    Name = "${var.project}-nat-gateway"
    Project = "${var.project}"
  }
}

resource "aws_route_table" "private-route-table" {
  vpc_id = "${aws_vpc.vpc.id}"

  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = "${aws_nat_gateway.nat-gateway.id}"
  }

  tags {
    Name = "${var.project}-routes"
    Project = "${var.project}"
  }
}

resource "aws_route_table_association" "private-route-table-association" {
  subnet_id      = "${aws_subnet.private-subnet.id}"
  route_table_id = "${aws_route_table.private-route-table.id}"
}



resource "aws_security_group" "sg-ssh" {
  name        = "allow_ssh"
  description = "Allow all inbound SSH"
  vpc_id      = "${aws_vpc.vpc.id}"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }

  tags {
    Name = "${var.project}-ssh"
    Project = "${var.project}"
  }
}



resource "aws_security_group" "allow-bastion" {
  name        = "from-bastion"
  description = "Allow all communications from bastion"
  vpc_id      = "${aws_vpc.vpc.id}"

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["${aws_instance.bastion.private_ip}/32"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["${aws_instance.bastion.private_ip}/32"]
  }

  tags {
    Name = "${var.project}-allow-bastion"
    Project = "${var.project}"
  }
}
